<resources>
    <string name="app_name">Pool</string>
    <string name="action_settings">Settings</string>
    <string name="team_1_hint">Team 1</string>
    <string name="team_2_hint">Team 2</string>
    <string name="first_break_label">(has first break)</string>
    <string name="race">Race?</string>
    <string name="race_to">To</string>
    <string name="alternate_break">Alternate Break</string>
    <string name="winner_break">Winner Break</string>
    <string name="start_match">Start match</string>
    <string name="score">Score</string>
    <string name="current_break">Break:</string>
    <string name="next_break">Next Break:</string>
    <string name="first_break">First Break:</string>
    <string name="team_one_wins">Team one wins</string>
    <string name="team_two_wins">Team two wins</string>
    <string name="rack_number">Rack #</string>
    <string name="default_race_to_five">5</string>
    <string name="team_wins">%s wins</string>
    <string name="congratulations_you_win_final_score">Congratulations %s, you win!\nFinal Score:\n%s: %d\n%s: %d</string>
</resources>
