<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/current_break_header"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="76dp"
        android:text="@string/current_break"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rack_header" />

    <Button
        android:id="@+id/team_one_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/team_one_wins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/team_two_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/team_two_wins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/team_one_wins"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rack_header"
        android:layout_width="94dp"
        android:layout_height="38dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="76dp"
        android:text="@string/rack_number"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_one_wins" />

    <TextView
        android:id="@+id/rack_counter"
        android:layout_width="67dp"
        android:layout_height="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="84dp"
        android:fontFamily="sans-serif-black"
        android:text="999"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/rack_header"
        app:layout_constraintTop_toBottomOf="@+id/team_two_wins" />

    <TextView
        android:id="@+id/current_break_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="84dp"
        android:text="textView"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/current_break_header"
        app:layout_constraintTop_toBottomOf="@+id/rack_counter" />

</android.support.constraint.ConstraintLayout>